//bugs.freedesktop.org/show_bug.cgi?id=1306) attachment #1291     (https://bugs.freedesktop.org/attachment.cgi?id=1291): Fix SEGV in     "radeon" driver. Patch by Kevin E. Martin <kem@freedesktop.org>